Fixed text color for dark mode in info button

--- a/src/App.css
+++ b/src/App.css
@@ -307,6 +307,7 @@ a:hover {
   padding: 20px;
   opacity: 0;
   position: relative;
+  color: #000;
 }
 .btn-help:hover .text-section{
   animation: forwards fadeIn 0.7s 0.5s ease-in-out ;
@@ -342,3 +343,5 @@ a:hover {
   right: 20px;
 }
 }
+
+
